Fixes for broken UI elements on ecosia.org

--- a/opera/dark.css
+++ b/opera/dark.css
@@ -20,9 +20,10 @@
   --color-button-primary-focus:#303134!important;/*clicked in buttons*/
   --color-border-primary-focus:#36acb8!important;/*Border on buttons in settings etc*/
   --color-border-primary-hover:#36acb8!important;/*Border on buttons in settings etc*/
-  --color-highlighter:#1f2f30!important;/*highlighter of text 232f34*/
+  --color-highlighter:#1f2e1f!important;/*highlighter of text 232f34*/
   --color-brand-secondary:#008009!important;/*Brand colour*/
   --color-disabled: #484a4e!important;/*Disabled colour*/
+  --color-button-background-secondary-hover: rgb(36, 37, 39) !important;
 
   /* Search bar */
   --color-form-border-default:rgba(0, 0, 0, 0)!important;
@@ -116,7 +117,7 @@ svg.above-fold-section__wave{
 
 
 /* new homepage */
-section.above-fold-section[data-v-86eb93e4] {
+section.above-fold-section[data-v-86eb93e4], section.above-fold-section {
 background-color:var(--color-background-primary)!important;
 }
 div.indexpage-forest--addon[data-v-5174b269]{
@@ -155,12 +156,6 @@ background-color: var(--color-highlight-primary)!important;
 
 
 /* scrollbar  */
-
-/* Works on Firefox */
-* {
-scrollbar-width: auto!important;
-scrollbar-color: #44464a #303134!important;
-}
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
@@ -213,3 +208,9 @@ border-color: #555555 transparent transparent transparent;
 border-color: #777777 transparent transparent transparent;
 }
 
+
+/* web conversions and stuff */
+
+section.computation, section.instant-answer{
+  background: var(--color-button-background-primary)!important;
+}
